// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
</View>
`;

exports[`2. tile b 1`] = `
<View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
    <Text>
      <Text>
        
        The 
        <Text>
          Duke of Edinburgh
        </Text>
         could be charged with driving without due care and attention after his car accident yesterday
        ...
      </Text>
    </Text>
  </View>
</View>
`;

exports[`3. tile c 1`] = `
<View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
</View>
`;

exports[`4. tile d 1`] = `
<View>
  <View>
    <Image
      aspectRatio={1.5}
      uri="https://img/someImage"
    />
  </View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
</View>
`;

exports[`5. tile e 1`] = `
<View>
  <View>
    <Image
      aspectRatio={0.8}
      uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fe68da1ac-25af-11e9-8d35-0e32f390087a.jpg?crop=654%2C817%2C1585%2C107"
    />
  </View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
</View>
`;
